--- a/lists/music/index.html
+++ b/lists/music/index.html
@@ -369,7 +369,7 @@ div#all {
   <div id="all">
 
   <div class="view view-first">
-    <img src="../images/albulm/eve1.jpg">
+    <img src="../../images/albulm/eve1.jpg">
     <div class="mask">
       <h2>Eve - Bunka (2017)</h2>
       <p>Favorite songs: Dramaturgy, Okini Mesu Mama, Nonsense Bunkaku</p>
@@ -379,7 +379,7 @@ div#all {
 
 
   <div class="view view-first">
-    <img src="../images/albulm/coshunie1.jpg">
+    <img src="../../images/albulm/coshunie1.jpg">
     <div class="mask">
       <h2>Cö Shu Nie - Aurora (2017)</h2>
       <p>Favorite songs: Asphyxia, Defection, Character</p>
@@ -388,7 +388,7 @@ div#all {
   </div>
 
   <div class="view view-first">
-    <img src="../images/albulm/asas.jpg">
+    <img src="../../images/albulm/asas.jpg">
     <div class="mask">
       <h2>Lemon Demon - Spirit Phone (2016)</h2>
       <p>Favorite songs: Life Time Achievement Award, Touch-Tone Telephone, Cabinet Man, As Your Father I Expressly Forbid It</p>
@@ -398,7 +398,7 @@ div#all {
 
 
   <div class="view view-first">
-    <img src="../images/albulm/aa.jpg">
+    <img src="../../images/albulm/aa.jpg">
     <div class="mask">
       <h2>My Chemical Romance - Three Cheers For Sweet Revenge (2004)</h2>
       <p>Favorite songs: You Know What They Do To Guys Like Us In Prison, Hang 'Em High</p>
@@ -409,7 +409,7 @@ div#all {
 
 
   <div class="view view-first">
-    <img src="../images/albulm/a.jpg">
+    <img src="../../images/albulm/a.jpg">
     <div class="mask">
       <h2>Twenty One Pilots - Vessel (2013)</h2>
       <p>Favorite songs: Holding On To You, Migraine, Ode To Sleep, Car Radio, Guns for Hands</p>
@@ -419,7 +419,7 @@ div#all {
 
 
     <div class="view view-first">
-      <img src="../images/albulm/1.jpg">
+      <img src="../../images/albulm/1.jpg">
       <div class="mask">
         <h2>Tally Hall - Marvin's Marvelous Mechanical Museum (2005)</h2>
         <p>Favorite songs: Greener, Taken for a Ride, The Bidding, Just Apathy, Two Wuv, Haiku, Hidden In The Sand</p>
@@ -428,7 +428,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/dpr.jpg">
+      <img src="../../images/albulm/dpr.jpg">
       <div class="mask">
         <h2>Dirt Poor Robins - The Raven Locks Act 3 (2017)</h2>
         <p>Favorite songs: Great Vacation, Welcome To Lady Hell</p>
@@ -437,7 +437,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/ggg.jpg">
+      <img src="../../images/albulm/ggg.jpg">
       <div class="mask">
         <h2>Boards of Canada - Geogaddi (2002)</h2>
         <p>Favorite songs: Beware the Friendly Stranger, Gyroscope, Julie and Candy, The Devil Is in the details </p>
@@ -446,7 +446,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/lll.jpg">
+      <img src="../../images/albulm/lll.jpg">
       <div class="mask">
         <h2>The Hush Sound - Like Vines (2006)</h2>
         <p>Favorite songs: We Intertwined, A Dark Congregation, Lions Roar, Don't Wake Me Up, Wine Red</p>
@@ -455,7 +455,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/mmtu.jpg">
+      <img src="../../images/albulm/mmtu.jpg">
       <div class="mask">
         <h2>Mother Mother - Touch Up (2007)</h2>
         <p>Favorite songs: Oh Ana, Love and Truth, Verbatim, and Tic Toc</p>
@@ -464,7 +464,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/csm.jpg">
+      <img src="../../images/albulm/csm.jpg">
       <div class="mask">
         <h2>Cosmo Sheldrake - The Much Much How How and I (Deluxe Edition) (2019)</h2>
         <p>Favorite songs: Linger Longer, Come Along</p>
@@ -473,7 +473,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/idk.jpg">
+      <img src="../../images/albulm/idk.jpg">
       <div class="mask">
         <h2>I DONT KNOW HOW BUT THEY FOUND ME - 1981 Extended Play (2018)</h2>
         <p>Favorite songs: Choke, Bleed Magic, Absinthe</p>
@@ -482,7 +482,7 @@ div#all {
     </div>
 
     <div class="view view-first">
-      <img src="../images/albulm/upl.jpg">
+      <img src="../../images/albulm/upl.jpg">
       <div class="mask">
         <h2>Blue Kid - Upright, Love (2012)</h2>
         <p>Favorite songs: Can You Keep Up, The Dismemberment Song, Black Sheep</p>
@@ -493,7 +493,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/f.jpg">
+        <img src="../../images/albulm/f.jpg">
         <div class="mask">
           <h2>Sasakure.uk - UNIQTRAP (2017)</h2>
           <p>Favorite songs: Start Menu (Undefined Remix), Hopes and Dreams (Alterego Remix)</p>
@@ -502,7 +502,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/ss.jpg">
+        <img src="../../images/albulm/ss.jpg">
         <div class="mask">
           <h2>Dave Days - Boy You'll Forget (2013)</h2>
           <p>Favorite songs: Boy You'll Forget, East To West (Bonus Track)</p>
@@ -511,7 +511,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/gf.jpg">
+        <img src="../../images/albulm/gf.jpg">
         <div class="mask">
           <h2>Radwimps - Kimi No Na Wa OST (2016)</h2>
           <p>Favorite songs: Zen Zen Zense (Movie Version), Sparkle (Movie Version), Nandemonaiya (Movie Edit)</p>
@@ -520,7 +520,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/qq.png">
+        <img src="../../images/albulm/qq.png">
         <div class="mask">
           <h2>Death Cab For Cutie - Plans (2005)</h2>
           <p>Favorite songs: Soul Meets Body, I Will Follow You Into The Dark, Crooked Teeth</p>
@@ -529,7 +529,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/aaa.jpg">
+        <img src="../../images/albulm/aaa.jpg">
         <div class="mask">
           <h2>Coyote Theory - Color (2011)</h2>
           <p>Favorite songs: This Side Of Paradise, The Ruse & The Caper</p>
@@ -539,7 +539,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/fd.jpg">
+        <img src="../../images/albulm/fd.jpg">
         <div class="mask">
           <h2>Eden - I Think You Think To Much Of Me (2016)</h2>
           <p>Favorite songs: Sex, Drugs, Rock + Roll, XO, Circle</p>
@@ -548,7 +548,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/fdfd.jpg">
+        <img src="../../images/albulm/fdfd.jpg">
         <div class="mask">
           <h2>Snow Patrol - Eyes Open (2005)</h2>
           <p>Favorite songs: Chasing Cars, Open Your Eyes, Shut Your Eyes</p>
@@ -557,7 +557,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/vv.jpg">
+        <img src="../../images/albulm/vv.jpg">
         <div class="mask">
           <h2>The Brobecks - Violent Things (2009)</h2>
           <p>Favorite songs: Goodnight Socialite, Better Than Me, Second Boys Will Be First Choice, Small Cuts, I Will Tonight, Visitation Of The Ghost</p>
@@ -566,7 +566,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/2.png">
+        <img src="../../images/albulm/2.png">
         <div class="mask">
           <h2>Akira Yamaoka - Silent Hill 2 OST (2001)</h2>
           <p>Favorite songs: Theme Of Laura, The Darknness That Lurks In Our Mind, Laura Plays THe Piano</p>
@@ -575,7 +575,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/qw.jpg">
+        <img src="../../images/albulm/qw.jpg">
         <div class="mask">
           <h2>Joe Iconis - Be More Chill (2015)</h2>
           <p>Favorite songs: More Than Survive, The Squip Song, A Guy That I'd Kinda Be Into, Loser Geek Whatever, Michael In The Bathroom, The Pants Song, Voices In My Head</p>
@@ -585,7 +585,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/fff.jpg">
+        <img src="../../images/albulm/fff.jpg">
         <div class="mask">
           <h2>Asian Kung-Fu Generation - Hōkai Amplifier (2002)</h2>
           <p>Favorite songs: Haruka Kanata, Ao No Uta</p>
@@ -596,7 +596,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/ppl.jpeg">
+        <img src="../../images/albulm/ppl.jpeg">
         <div class="mask">
           <h2>The 1975 - Notes on a Conditional Form (2020)</h2>
           <p>Favorite song: People</p>
@@ -606,7 +606,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/nny.jpg">
+        <img src="../../images/albulm/nny.jpg">
         <div class="mask">
           <h2>Half Alive - Now, Not Yet (2019)</h2>
           <p>Favorite songs: Runaway, Arrow, Still Feel, Pure Gold</p>
@@ -616,7 +616,7 @@ div#all {
 
 
       <div class="view view-first">
-        <img src="../images/albulm/ww.jpg">
+        <img src="../../images/albulm/ww.jpg">
         <div class="mask">
           <h2>煮ル果実 - ヲズワルド (2020)</h2>
           <p>Favorite song: ヲズワルド</p>
@@ -625,7 +625,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/3.jpg">
+        <img src="../../images/albulm/3.jpg">
         <div class="mask">
           <h2>Half Alive - 3 (2017)</h2>
           <p>Favorite songs: The Fall, Tip Toes </p>
@@ -634,7 +634,7 @@ div#all {
       </div>
 
       <div class="view view-first">
-        <img src="../images/albulm/st.jpg">
+        <img src="../../images/albulm/st.jpg">
         <div class="mask">
           <h2>Twenty One Pilots - Twenty Online Pilots (2009)</h2>
           <p>Favorite songs: Implicit Demand for Proof, Fall Away, The Pantaloon, Air Catcher, Trapdoor, Isle of Flightless Birds</p>
@@ -646,7 +646,7 @@ div#all {
 
 
             <div class="view view-first">
-              <img src="../images/albulm/z.jpg">
+              <img src="../../images/albulm/z.jpg">
               <div class="mask">
                 <h2>DM Dokuro - UNDERTALE: The Underground Radio (2016)</h2>
                 <p>Favorite songs: g a r d e n, SAVE, Reality Check Through The Skull, COMMON CORE</p>
@@ -655,7 +655,7 @@ div#all {
             </div>
 
             <div class="view view-first">
-              <img src="../images/albulm/x.jpg">
+              <img src="../../images/albulm/x.jpg">
               <div class="mask">
                 <h2>Jin - Mekacuity Records (2013)</h2>
                 <p>Favorite songs: Children Record (Re Ver.), Outer Science, Lost Time Memory</p>
@@ -664,7 +664,7 @@ div#all {
             </div>
 
             <div class="view view-first">
-              <img src="../images/albulm/v.jpg">
+              <img src="../../images/albulm/v.jpg">
               <div class="mask">
                 <h2>Cavetown - Cavetown (2015)</h2>
                 <p>Favorite songs: Untitled V.2, Devil Town</p>
@@ -673,7 +673,7 @@ div#all {
             </div>
 
             <div class="view view-first">
-              <img src="../images/albulm/q.png">
+              <img src="../../images/albulm/q.png">
               <div class="mask">
                 <h2>REOL - Sigma (2016)</h2>
                 <p>Favorite songs: YoiYoi Kokon, -FINAL SIGMA-</p>
@@ -682,7 +682,7 @@ div#all {
             </div>
 
             <div class="view view-first">
-              <img src="../images/albulm/s.jpg">
+              <img src="../../images/albulm/s.jpg">
               <div class="mask">
                 <h2>Vivid Undress - Vivid Undress (2018)</h2>
                 <p>Favorite songs: SAYONARA DILEMMA, WATASHI MENHERA NANKAJA NAIMON, IKITE IKITE</p>
