--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- InstanceEndEditable -->
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ren's reimagined rondeau">
-<meta name="keywords" content="ren">
+<meta name="keywords" content="ren, relive, relivesight, omnisai, omnisairen">
 <meta name="author" content="omnisairen">
 <link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
  <!--href="https://fontlibrary.org/face/sometype-mono" type="text/css"-->
