--- a/projects/potentials/index.html
+++ b/projects/potentials/index.html
@@ -44,6 +44,7 @@
               <ul>
                 <li>picam - a raspberry pi security camera system</a></li>
                 <li>omni-imperium - my dream controller project, because current controllers are awful</li>
+                <li>physical pageview counter - a visual display for relivesight.com that i can keep on my desk</li>
                 
             </ul>
          
