--- a/re/side.html
+++ b/re/side.html
@@ -31,6 +31,8 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/counter/">counter</a></li>
+    <li><a href="https://relivesight.com/projects/encoder/">encoder</a></li>
     <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
