--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -60,6 +60,29 @@
 						</div>
 
 						<div id="content">
+							<h3 style="float: right; right: 4px;">Pageview Counter</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								a physical counter for all the pageviews my website gets, ahh yeah yet another way to feed my ego!</ol>
+									<div class="label">
+								<p><a href="/projects/counter">Read More</a></p>
+							</div>
+						</div>						
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">Encoder</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								very descriptive name i know.. basically its just this midi device i had that im repurposing to run qmk and encoders woot.</ol>
+									<div class="label">
+								<p><a href="/projects/encoder">Read More</a></p>
+							</div>
+						</div>		
+
+
+						<div id="content">
 							<h3 style="float: right; right: 4px;">3d Modelling</h3>
 							<p>-----</p>
 							<ol class="playlist_info">
