--- a/art/index.html
+++ b/art/index.html
@@ -57,7 +57,13 @@
 						</div>
 
 
-
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/art/painting/1.png" style="width: 160px;"/>
+                            <br><br><h3>Paintings</h3>            <ol class="playlist_info">
+                                <li>my paintings with paint <</li><br>
+                            </ol>
+                            <a href="/art/paintings" class="label3">CLICK TO SEE PAINTING</a>
+                    </div>
 
 
                         <div id="ccontent">
