--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!-- InstanceBeginEditable name="pgContent" -->
 
 	<div class="col-sm-12">
-      <h1>『Re Sight』</h1>
+      <h1>『Re:Live Sight』</h1>
       <p>no matter where you go, everyone's connected. welcome to my connection, please stop by the
         <a href="/highlights/">hightlights</a> page if you are new!</p>
     </div>
