--- a/mobile/index.html
+++ b/mobile/index.html
@@ -68,7 +68,7 @@
 <!-- InstanceBeginEditable name="pgContent" -->
 
 	<div class="col-sm-12">
-      <h1>『Re Sight』</h1>
+      <h1>『Re:Live Sight』</h1>
 
       <p>this mobile site is a simplified version of the desktop, hopefully it functions enough. thanks for visiting! please stop by the
         <a href="/highlights/">hightlights</a> page if you are new!
