--- a/sites/index.html
+++ b/sites/index.html
@@ -135,7 +135,7 @@
 
 
       
-      <p><a id="back" href="https://relivesight.com/reference/">back a page</a></p>
+      <p><a id="back" href="https://relivesight.com/">back a page</a></p>
       <p>┈ ren ​♡</p>
 
 
