--- a/projects/tallcap/index.html
+++ b/projects/tallcap/index.html
@@ -35,13 +35,13 @@
             <p>—「0X://Explanation」<br>
             An unecessarily large keycap for an unecessary reason. just for the meme thats it.
             </p>
-            <p><a target="_blank" href="https://www.reddit.com/r/MechanicalKeyboards/comments/j8k89j/no_more_accidently_hitting_that_pesky_windows_key/">reddit post</a> - thanks for 14.1k upvotes and 24 awards <3</p>
+            <p><a target="_blank" href="https://www.reddit.com/r/MechanicalKeyboards/comments/j8k89j/no_more_accidently_hitting_that_pesky_windows_key/">reddit post</a> - thanks for 14.3k upvotes and 24 awards (and top 50 r/mk posts of all time wow)<3</p>
               <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
               <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/tallcap/2.jpeg" width="500px">
         
             
               <h1>Log 1: Idk its pretty tall tho</h1>
-             <p>this one is gunna be rapid fire. through together the thing in openscad and then through it on the printer, TaDa~:</p>
+             <p>this one is gunna be rapid fire. threw together the thing in openscad and then threw it on the printer, TaDa~:</p>
              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/tallcap/1.jpeg" width="500px">
 
              <p>wow! and thats it its done no more info thats all have a nice day.
