--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!--<p>feel free to leave a note in the guest-book while you're here!</p>
 <p>partially under construction right now! please mind any issues~</p>-->
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-  <a href="/projects/" class="navi" ><img src="images/nav/flow.png">most recently updated page: projects <img src="images/nav/flow.png"></a>
+  <a href="/ongoing/" class="navi" ><img src="images/nav/flow.png">most recently updated page: ongoing <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
 
