--- a/projects/encoder/index.html
+++ b/projects/encoder/index.html
@@ -46,6 +46,26 @@
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/1.jpeg" width="500px">
                 <p>i've already scalped its pcb, and am preparing to handwire it! just need to learn about qmk encoders yes...
                 </p>
+
+
+
+          <h1>Log 2: As if weather could stop me</h1>
+          <p>painting! and as the title suggests, the temperatures are not sufficient for painting at all... but i did it nonetheless:  </p>
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/3.jpeg" width="340px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/4.jpeg" width="298px">
+              <p>now i just need to get the encoders to work... except they don't work with a nano. no problem (though that does make the title quite incorect huh)! ill just use some potentiometers.
+                they don't fit though, so i had to use some sneaky wire cutters:
+              </p>  
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/5.jpeg" width="225px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/6.jpeg" width="400px">
+              <p>now the encoders fit snugly! (well with a bit of magical glue)</p>
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/7.jpeg" width="280px">
+              <p>so now i just added mx blues (i know they arent great (i h*te clickys too) but they're the only fully black housing i have and its good to get them used finally)
+                with some more super duper glue and now i just need to write it and program it properly!
+              </p>
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/8.jpeg" width="225px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/encoder/9.jpeg" width="400px">
+              <p>just waiting on some more potnetiometers to arrive, cya next time!</p>
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
