--- a/projects/potentials/index.html
+++ b/projects/potentials/index.html
@@ -44,8 +44,7 @@
               <ul>
                 <li>picam - a raspberry pi security camera system</a></li>
                 <li>omni-imperium - my dream controller project, because current controllers are awful</li>
-                <li>physical pageview counter - a visual display for relivesight.com that i can keep on my desk</li>
-                <li>media mixer - some encoders and mx switches glued in the place of an old device (at least thats the idea)</li>
+                <li>kinect usage - make some sort of 3d scanner / aware device from a kinect camera</li>
                 
             </ul>
          
