--- a/re/side.html
+++ b/re/side.html
@@ -31,17 +31,18 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
-    <li><a href="https://relivesight.com/projects/counter/">counter</a></li>
-    <li><a href="https://relivesight.com/projects/encoder/">encoder</a></li>
-    <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
-  <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
+  <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  <li><a href="https://relivesight.com/projects/counter/">counter</a></li>
+  <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
+  <li><a href="https://relivesight.com/projects/encoder/">encoder</a></li>
   <li><a href="https://relivesight.com/projects/tallcap/">tall cap</a></li>
+  <li><a href="https://relivesight.com/projects/keycaps/">keycaps</a></li>
   <li><a href="https://relivesight.com/projects/allinone/">all in one</a></li>
   <li><a href="https://relivesight.com/projects/arcade/">arcade cntrlr</a></li>
   <li><a href="https://relivesight.com/projects/433/">433% keyboard</a></li>
