--- a/mobile/index.html
+++ b/mobile/index.html
@@ -80,6 +80,12 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
  
+        
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">10/14/20 </h3>
+          <p style="margin-bottom:30px;">am i really supposed to keep things updated? ✿</p>
+        </div>
+        
 
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">9/16/20 </h3>
