--- a/projects/gamedev/index.html
+++ b/projects/gamedev/index.html
@@ -36,7 +36,7 @@
             welcome to the log of an aboslute newb's attempt at making a video game. ive never made a game (except text based python ones) and ive never made sprites, level design, physics, or whatever it is i havent done it, but alas, i feel it may be possible.
             the plan is a 1bit 2d metroidvania platformer shooter, but that may be too ambitious. 
             </p>
-              <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+              <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
         
               <img src="" width="500px">
         
@@ -53,8 +53,15 @@
              </p>
              <img src="https://drive.google.com/uc?export=view&id=1FwmHfVtysfLBxcVbaC9K9-94d2Kqwli3" width="500px">
              <p>i have set up a board to keep track of what things need adding, im going for shooting next, since violence is always the answer</p>
-<br>
-   <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+
+             <h1>Log 2: A Sign Off</h1>
+             <p>i'm shelving this project... but do not fret! a new game is in development. im taking this one so seriously that you should expect a new
+               page on the homepage to show up providing a devlog/preview-work of the game! ive pulled back the scope to something feasible, this was too much for my first game.
+             </p>
+
+
+             <br>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
    <p>┈ ren ​♡</p>
 
 
