--- a/highlights/index.html
+++ b/highlights/index.html
@@ -57,8 +57,8 @@
           <li><a href="https://relivesight.com/projects/arcade/" target="_blank">arcade controller</a> - a simple arcade controller i built to play tetris </li>
           <li><a href="https://relivesight.com/projects/mikuyboard/" target="_blank">mikuyboard</a> - a 128 keyboard covered in hastune miku stickers</li>
           <li><a href="https://relivesight.com/projects/quarandream/" target="_blank">quarandream</a> - my favorite split keyboard ive made</li>
-          <li><a href="https://relivesight.com/projects/encoder/" target="_blank">encoder</a></li> - volume control device
-          <li><a href="https://relivesight.com/projects/counter/" target="_blank">counter</a></li> - physical website pageview counter for my windowsil
+          <li><a href="https://relivesight.com/projects/encoder/" target="_blank">encoder</a> - volume control device</li>
+          <li><a href="https://relivesight.com/projects/counter/" target="_blank">counter</a> - physical website pageview counter for my windowsil</li>
           <li><a href="https://relivesight.com/reference/wii/" target="_blank">wii softmod guide</a> - decent guide to softmodding your wii</li>
           <li><a href="https://relivesight.com/projects/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
           <li><a href="https://relivesight.com/projects/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
