--- a/highlights/index.html
+++ b/highlights/index.html
@@ -44,11 +44,13 @@
         <h1>Top 10 Anime Descriptions</h1>
         <p>—「01://Who am I?」<br>
       i am ren rose, i have quite a few hobbies and if you wanna read more about me reference my <strike>cringe</strike> <a href="https://relivesight.com/bio" target="_blank">bio</a>.
-    but i could sum it all up by saying i am a 'technology enthusiast' since (mostly) all of my hobbies wouldn't be possible without tech (but please dont apply such a limiting description to me).</p>
+    but i could sum it all up by saying i am a 'technology enthusiast' since (mostly) all of my hobbies wouldn't be possible without tech (but please dont apply such a limiting description to me).
+  check the <a href="https://relivesight.com/blog" target="_blank">blog</a> for entries about what i've been working on~
+  </p>
         
     
     <p>—「02://Points of Interest」<br>
-       this site is a passion project of mine, it is a bit of a aesthetic expression but also a hopefully functional site for following along with my projects so that
+       this site is a passion project of mine, it is a bit of a aesthetic expression but also a hopefully functional site for following along with my <a href="https://relivesight.com/projects/" target="_blank">projects</a> so that
        maybe you are able to learn something yourself! there's quite a bit here, and some parts of the site get neglected more than others (there is alot to keep up on) so heres some highlights if you want to see which
        projects and pages i am the most proud of:
       </p>
