--- a/projects/counter/index.html
+++ b/projects/counter/index.html
@@ -312,7 +312,7 @@ the displays (enough to show 1,2,3,4,5,6,7,8, but not much else yet. wish me luc
 <p>now just solder it up and make sure it works: </p>
 
 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/counter/3.jpeg" width="400px"> 
-<p>sweet it works! ill keep it on my windowsil:</p> 
+<p>positive! i decided to keep it on my windowsil:</p> 
 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/counter/4.jpeg" width="400px">
 
 <p>and its all done! it updates every minute, and honestly it seems like it wasnt much of a hassle, but 
