--- a/re/side.html
+++ b/re/side.html
@@ -31,6 +31,7 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/deej2/">deej2</a></li>
   <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
