--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -59,12 +59,24 @@
 								</div>
 						</div>
 
-						
+						<div id="content">
+							<h3 style="float: right; right: 4px;">Deej2</h3>
+							<p>11/03/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								that first deej project went so well that i decided to make another~ i have all the supplies so why not</ol>
+							<div class="label">
+								<p><a href="/projects/deej2">Read More</a></p>
+							</div>
+						</div>						
+
+
+										
 
 
 						<div id="content">
 							<h3 style="float: right; right: 4px;">3d Modelling</h3>
-							<p>-----</p>
+							<p>10/01/20</p>
 							<ol class="playlist_info">
 								<li class="rr">
 								my quest to 3d model every object in existence, or more realistically: to get skills to model the pieces i need for all my other projects, should remain ongoing for a long time</ol>
