--- a/re/side.html
+++ b/re/side.html
@@ -90,7 +90,7 @@
 
 <a href="">Study Logs</a>
   <ul>
-  <li><a href="">----------</a></li>
+    <li><a href="https://relivesight.com/studylogs/dithering/">dithering</a></li>
   </ul>
 
     </body></html>
