--- a/studylogs/index.html
+++ b/studylogs/index.html
@@ -46,7 +46,8 @@
 
 
         <div id="content">
-            <p>this is like project logs but things i just learn, not things im making, for now there is nothing here but i needed to get this page up n running
+            <p>project logs but for things im learning about, likely won't be updated nearly frequently enough but hopefully someone is able to learn something from these.
+
             </p>
             
         </div>
@@ -59,19 +60,20 @@
 
 
 
-<div id="ccontent">
-            <img class="auditorium" src="../images/society/dd.gif" style="width: 160px;"/>
-						<br><br><h3>Coming Soon</h3>            <ol class="playlist_info">
-							<li>coming soon <</li><br>
-            </ol>
-						<a href="../ucc" class="label3">CLICK TO SEE MY LEARN</a>
 
-
-        </div>
-
-
- 
-
+        <div id="content">
+            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/studylogs/dithering/1.png" style="width: 250px;"/>
+            
+            <h3 style="float: right; right: 4px;">Dithering</h3>
+            <p>11/02/20</p>
+            <ol class="playlist_info">
+                <li class="rr">
+                information about photoshop dithering and other related processes: halftoning, diffusion and pattern dither~
+                <li class='rr'>Type: [Art]</li></ol>
+                    <div class="label">
+                <p><a href="/studylogs/dithering/">Read More</a></p>
+            </div>
+        </div>	
 
         <div id="site_entry">
             <p>[ <a href="#">Back to Top</a> ]</p>
