--- a/mobile/index.html
+++ b/mobile/index.html
@@ -82,6 +82,11 @@
  
         
         <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">10/25/20 </h3>
+          <p style="margin-bottom:30px;">​♡ thanks for 50k views ​♡</p>
+        </div>
+        
+        <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/14/20 </h3>
           <p style="margin-bottom:30px;">am i really supposed to keep things updated? ✿</p>
         </div>
