--- a/projects/index.html
+++ b/projects/index.html
@@ -66,6 +66,22 @@
 						</div>
 
 
+						<div id="content">
+							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/deej2/1.png" style="width: 250px;"/>
+							
+							<h3 style="float: right; right: 4px;">Deej x2</h3>
+							
+							<p>11/04/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								that first deej project went so well that i decided to make another~ i have all the supplies so why not
+								<li class='rr'>Status: [Completed]</li></ol>
+							<div class="label">
+								<p><a href="/projects/deejx2">Read More</a></p>
+							</div>
+						</div>						
+
+
 
 						<div id="content">
 							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/counter/8.png" style="width: 250px;"/>
