--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
   <a href="/projects/blog/" class="navi" ><img src="images/nav/flow.png">most recently updated page: blog <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
+  <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
+  <div class="col-sm-9 col-md-offset-1">
+    <h3 style="margin-bottom:10px;">10/25/20 </h3>
+    <p style="margin-bottom:30px;">​♡ thanks for 50k views ​♡</p>
+  </div>
+  
 
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
   <div class="col-sm-9 col-md-offset-1">
