--- a/re/side.html
+++ b/re/side.html
@@ -31,7 +31,7 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
-    <li><a href="https://relivesight.com/projects/deej2/">deej2</a></li>
+
   <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
@@ -39,6 +39,7 @@
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  <li><a href="https://relivesight.com/projects/deejx2/">deej x2</a></li>
   <li><a href="https://relivesight.com/projects/counter/">counter</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
   <li><a href="https://relivesight.com/projects/encoder/">encoder</a></li>
