--- a/mobile/index.html
+++ b/mobile/index.html
@@ -71,7 +71,7 @@
       <h1>『Re:Live Sight』</h1>
 
       <p>this mobile site is a simplified version of the desktop, hopefully it functions enough. thanks for visiting! please stop by the
-        <a href="/highlights/">hightlights</a> page if you are new!
+        <a href="/highlights/">highlights</a> page if you are new!
       </p>
     </div>
     <div class="col-sm-12">
