CLICK TO SEE MORE

--- a/art/index.html
+++ b/art/index.html
@@ -47,7 +47,7 @@
 
         <div id="content">
             <p>
-                Welcome to the place where i share my art endeavors, or other art i enjoy note: i cannot draw, so most all i do is digital
+                Welcome to the place where i share my art endeavors, note: i cannot draw well, so most all i do is digital
             </p>
         </div>
 				<div id="content2">
@@ -62,7 +62,7 @@
                             <br><br><h3>Paintings</h3>            <ol class="playlist_info">
                                 <li>my paintings with paint <</li><br>
                             </ol>
-                            <a href="/art/paintings" class="label3">CLICK TO SEE PAINTING</a>
+                            <a href="/art/paintings" class="label3">CLICK TO SEE MORE</a>
                     </div>
 
 
@@ -71,7 +71,7 @@
                             <br><br><h3>Published Era</h3>            <ol class="playlist_info">
                                 <li>re:Live Society Phase Two <</li><br>
                             </ol>
-                            <a href="/art/published" class="label3">CLICK TO SEE PHASE TWO</a>
+                            <a href="/art/published" class="label3">CLICK TO SEE MORE</a>
 
 
                     </div>
@@ -83,7 +83,7 @@
 								<br><br><h3>Graphic Design</h3>            <ol class="playlist_info">
 									<li>stuff i do on computer for fun~! <</li><br>
 								</ol>
-								<a href="/art/graphic" class="label3">CLICK TO SEE MY ATTEMPTS</a>
+								<a href="/art/graphic" class="label3">CLICK TO SEE MORE</a>
 
 
 						</div>
@@ -95,7 +95,7 @@
                     <br><br><h3>Digital Draws</h3>            <ol class="playlist_info">
                         <li>since i can't draw irl photoshop exists!~<</li><br>
                     </ol>
-                    <a href="/art/draws" class="label3">CLICK TO SEE MY ATTEMPTS</a>
+                    <a href="/art/draws" class="label3">CLICK TO SEE MORE</a>
 
 
                 </div>
@@ -106,12 +106,12 @@
                     <br><br><h3>Friend Draws</h3>            <ol class="playlist_info">
                         <li>things friends have drawn for me! thanks~<</li><br>
                     </ol>
-                    <a href="/art/frens" class="label3">CLICK TO SEE THEIR WORK</a>
+                    <a href="/art/frens" class="label3">CLICK TO SEE MORE</a>
 
 
                 </div>
 
-
+<!--
                 <div id="ccontent">
                     <img class="auditorium" src="../images/art/wallpaper/1.png" style="width: 160px;"/>
                     <br><br><h3>Wallpapers</h3>            <ol class="playlist_info">
@@ -123,7 +123,7 @@
                 </div>
 
             
-
+-->
 
 
 
