--- a/mobile/index.html
+++ b/mobile/index.html
@@ -80,6 +80,11 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
  
+    
+  <div class="col-sm-9 col-md-offset-1">
+    <h3 style="margin-bottom:10px;">11/07/20 </h3>
+    <p style="margin-bottom:30px;">3d modelled floating teeth vibes <a href="https://twitch.tv/omnisairen" target="_blank">...here...</a> </p>
+  </div>
         
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/20 </h3>
