--- a/re/side.html
+++ b/re/side.html
@@ -39,6 +39,7 @@
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  <li><a href="https://relivesight.com/projects/various/">various</a></li>
   <li><a href="https://relivesight.com/projects/deejx2/">deej x2</a></li>
   <li><a href="https://relivesight.com/projects/counter/">counter</a></li>
   <li><a href="https://relivesight.com/projects/gamedev/">game dev</a></li>
