--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!--<p>feel free to leave a note in the guest-book while you're here!</p>
 <p>partially under construction right now! please mind any issues~</p>-->
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-  <a href="/projects/deejx2/" class="navi" ><img src="images/nav/flow.png">most recently updated page: deej x2 <img src="images/nav/flow.png"></a>
+  <a href="/projects/hornet/" class="navi" ><img src="images/nav/flow.png">most recently updated page: hornet <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
